Fixed the browse link color in dark mode

--- a/src/ImageUploader.css
+++ b/src/ImageUploader.css
@@ -277,6 +277,7 @@ main {
   margin-top: 3.5rem;
   width: 100%;
 }
+
 .preview-actions {
   display: flex;
   flex-direction: column;
@@ -383,13 +384,6 @@ text-decoration: underline;
     align-items: stretch;
   }
 }
-
-
-/* @media (min-width: 601px) {
-  .uploaderContainer {
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-} */
 
 .dropFileAreaContent p {
   color: #213547;
